--- a/Group001_12345_iPhone Air.html
+++ b/Group001_12345_iPhone Air.html
@@ -112,7 +112,7 @@
     </div>
     <div class="legal">
       <p>Copyright © 2025 S1S1 Group 001 All rights reserved.</p>
-      <p><a href="#">Privacy Policy</a> │ <a href="#">Terms of Use</a> │ <a href="#">Sales and Refunds</a> │ <a href="#">Legal</a> │ <a href="#">Site Map</a></p>
+      <p><a href="Group001_12345_iPhone ester egg.html">Privacy Policy</a> │ <a href="Group001_12345_iPhone ester egg.html">Terms of Use</a> │ <a href="Group001_12345_iPhone ester egg.html">Sales and Refunds</a> │ <a href="Group001_12345_iPhone ester egg.html">Legal</a> │ <a href="Group001_12345_iPhone ester egg.html">Site Map</a></p>
     </div>
   </footer>
   <script src="assets/js/features.js"></script>
