aadded photo and changed some ui

--- a/Group001_12345_iPhone 17 Pro.html
+++ b/Group001_12345_iPhone 17 Pro.html
@@ -10,7 +10,10 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#">Apple</a>
+      <a href="#" class="logo">
+      <img src="assets/images/Apple-Logo-white.png" alt="apple">
+      <h2>Apple (Tsun Jin)</h2>
+      </a>
     </div>
     <nav class="main-nav">
       <ul>
@@ -18,6 +21,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
@@ -27,12 +31,10 @@
   <main>
     <section class="hero">
       <div class="hero-content">
-        <h1>iPhone 17 Pro</h1>
-        <p>Power redefined. Crafted in titanium. Built for pros.</p>
-        <p class="cta"><a class="btn" href="#">Pre-order</a></p>
+        <p class="cta"><a class="btn" href="Group001_12345_iPhone Buy.html">Buy</a></p>
       </div>
-      <video class="hero-video" autoplay loop muted>
-        <source src="assets/images/iPhone17pro.mp4" type="video/mp4">
+      <video class="hero-video" autoplay muted>
+        <source src="assets/video/iPhone 17 Pro and Max.mp4" type="video/mp4">
         <img src="assets/images/iPhone17pro_poster.jpg" alt="Video not supported">
       </video>
     </section>
@@ -40,7 +42,7 @@
     <section class="features">
       <div class="feature-item">
         <video class="feature-video" muted playsinline preload="auto">
-          <source src="assets/images/iPhone17.mp4" type="video/mp4">
+          <source src="assets/video/iPhone 17 Pro and Max body.mp4" type="video/mp4">
         </video>
         <div class="feature-text">
           <h2>Aluminium Body</h2>
@@ -50,7 +52,7 @@
 
       <div class="feature-item">
         <video class="feature-video" muted playsinline preload="auto">
-          <source src="assets/videos/feature1.mp4" type="video/mp4">
+          <source src="assets/video/iPhone 17 Pro and Max_chip.mp4" type="video/mp4">
         </video>
         <div class="feature-text">
           <h2>A19 Pro Chip</h2>
@@ -60,7 +62,7 @@
 
       <div class="feature-item">
         <video class="feature-video" muted playsinline preload="auto">
-          <source src="assets/videos/feature1.mp4" type="video/mp4">
+          <source src="assets/video/iPhone 17 Pro and Max_vapour chamber.mp4" type="video/mp4">
         </video>
         <div class="feature-text">
           <h2>Vapour chamber</h2>
@@ -70,7 +72,7 @@
 
       <div class="feature-item">
         <video class="feature-video" muted playsinline preload="auto">
-          <source src="assets/videos/feature1.mp4" type="video/mp4">
+          <source src="assets/video/iPhone 17 Pro and Max_camera.mp4" type="video/mp4">
         </video>
         <div class="feature-text">
           <h2>Pro Camera System</h2>
@@ -79,9 +81,7 @@
       </div>
 
       <div class="feature-item">
-        <video class="feature-video" muted playsinline preload="auto">
-          <source src="assets/videos/feature1.mp4" type="video/mp4">
-        </video>
+        <img src="assets/images/iPhone 17 Pro and Max_display.png" alt="display">
         <div class="feature-text">
           <h2>ProMotion Display</h2>
           <p>6.3-inch/6.9-inch Super Retina XDR with adaptive 1Hz–120Hz refresh rate.</p>
@@ -89,9 +89,7 @@
       </div>
 
       <div class="feature-item">
-        <video class="feature-video" muted playsinline preload="auto">
-          <source src="assets/videos/feature1.mp4" type="video/mp4">
-        </video>
+        <img src="assets/images/iPhone 17 Pro and Max_battery.png" alt="display">
         <div class="feature-text">
           <h2>Battery Life</h2>
           <p>iPhone 17 Pro: Up to 31 hours video playback <br> iPhone 17 Pro Max: Up to 37 hours video playback </p>
@@ -100,7 +98,7 @@
 
       <div class="feature-item">
         <video class="feature-video" muted playsinline preload="auto">
-          <source src="assets/videos/feature1.mp4" type="video/mp4">
+          <source src="assets/video/iPhone 17 Pro and Max_front camera.mp4" type="video/mp4">
         </video>
         <div class="feature-text">
           <h2>Front camera</h2>
@@ -120,6 +118,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
