--- a/Group001_12345_iPhone About Us.html
+++ b/Group001_12345_iPhone About Us.html
@@ -10,7 +10,10 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#">Apple</a>
+      <a href="#" class="logo">
+      <img src="assets/images/Apple-Logo.png" alt="apple">
+      <h2>Apple (Tsun Jin)</h2>
+    </a>
     </div>
     <nav class="main-nav">
       <ul>
@@ -18,6 +21,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
@@ -52,6 +56,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
