--- a/Group001_12345_iPhone Air.html
+++ b/Group001_12345_iPhone Air.html
@@ -10,7 +10,10 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#">Apple</a>
+      <a href="#" class="logo">
+      <img src="assets/images/Apple-Logo.png" alt="apple">
+      <h2>Apple (Tsun Jin)</h2>
+    </a>
     </div>
     <nav class="main-nav">
       <ul>
@@ -18,6 +21,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
@@ -29,17 +33,18 @@
       <div class="hero-content">
         <h1>iPhone 17 Air</h1>
         <p>Light as air. Powerful as ever.</p>
-        <p class="cta"><a class="btn" href="#">Pre-order</a></p>
+        <p class="cta"><a class="btn" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>
-      <video class="hero-video" autoplay loop muted>
-        <source src="assets/images/iPhone17air.mp4" type="video/mp4">
-        <img src="assets/images/iPhone17air_poster.jpg" alt="Video not supported">
+      <video style="width: 100%; height: auto;" class="hero-video" autoplay loop muted>
+        <source src="assets/video/iPhone Air.mp4" type="video/mp4">
       </video>
     </section>
 
     <section class="features">
       <div class="feature-item">
-        <img src="assets/images/iPhone17air_thin.png" alt="Thin Design">
+      <video class="feature-video" muted playsinline preload="auto">
+        <source src="assets/video/iPhone Air thin.mp4" type="video/mp4">
+      </video>
         <div class="feature-text">
           <h2>Ultra-Thin Design</h2>
           <p>The all-new iPhone Air is so impossibly thin and light that it nearly disappears in your hand. At 5.6mm and weighing just 165g.</p>
@@ -47,7 +52,7 @@
       </div>
 
       <div class="feature-item">
-        <img src="assets/images/iPhone17air_display.png" alt="Display">
+        <img src="assets/images/iPhone air - screen.png" alt="Display">
         <div class="feature-text">
           <h2>Lightweight Display</h2>
           <p>6.5-inch Super Retina display with high brightness and energy efficiency.</p>
@@ -55,23 +60,17 @@
       </div>
 
       <div class="feature-item">
-        <img src="assets/images/iPhone17air_chip.png" alt="Chip">
-        <div class="feature-text">
+      <video class="feature-video" muted playsinline preload="auto">
+        <source src="assets/video/iphone air chip.mp4" type="video/mp4">
+      </video>
+      <div class="feature-text">
           <h2>A19 Pro Chip</h2>
           <p>Efficient power usage while keeping performance smooth.</p>
         </div>
       </div>
-      
-      <div class="feature-item">
-        <img src="assets/images/iPhone17air_camera.png" alt="Camera">
-        <div class="feature-text">
-          <h2>C1X modem</h2>
-          <p>C1X, the new version of the Apple‑designed modem, iPhone Air is the most power‑efficient iPhone ever made.</p>
-        </div>
-      </div>
 
       <div class="feature-item">
-        <img src="assets/images/iPhone17air_battery.png" alt="Battery">
+        <img src="assets/images/iPhone air - battery.png" alt="Battery">
         <div class="feature-text">
           <h2>Battery</h2>
           <p>Up to 27 hours video playback.</p>
@@ -79,7 +78,7 @@
       </div>
 
       <div class="feature-item">
-        <img src="assets/images/iPhone17air_camera.png" alt="Camera">
+        <img src="assets/images/iPhone17 - camera.png" alt="Camera">
         <div class="feature-text">
           <h2>Camera</h2>
           <p>Advanced 48MP cameras optimized for lightweight design. <br> 18MP Center Stage front camera.</p>
@@ -87,7 +86,9 @@
       </div>
 
       <div class="feature-item">
-        <img src="assets/images/iPhone17air_ios.png" alt="iOS 26">
+      <video class="feature-video" muted playsinline preload="auto">
+        <source src="assets/video/iphone air ios.mp4" type="video/mp4">
+      </video>
         <div class="feature-text">
           <h2>iOS 26</h2>
           <p>Smarter and more efficient, tailored for Air’s energy profile.</p>
@@ -106,6 +107,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
