--- a/Group001_12345_iPhone 17.html
+++ b/Group001_12345_iPhone 17.html
@@ -9,7 +9,10 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#">Apple</a>
+    <a href="#" class="logo">
+      <img src="assets/images/Apple-Logo.png" alt="apple">
+      <h2>Apple (Tsun Jin)</h2>
+    </a>
     </div>
     <nav class="main-nav">
       <ul>
@@ -17,6 +20,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
@@ -28,11 +32,10 @@
       <div class="hero-content">
         <h1>iPhone 17</h1>
         <p>Even more delightful. Even more durable.</p>
-        <p class="cta"><a class="btn" href="#">Pre-order</a></p>
+        <p class="cta"><a class="btn" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>  
     <video class="hero-video" autoplay loop muted>
-      <source src="assets/images/iPhone17.mp4" type="video/mp4">
-      <img src="path/to/your/video-poster.jpg" alt="Video not supported">
+      <source src="assets/video/iPhone17.mp4" type="video/mp4">
     </video>
     </section>
 
@@ -47,7 +50,9 @@
   </div>
 
   <div class="feature-item">
-    <img src="assets/images/iPhone17_camera.png" alt="Front Camera">
+    <video class="feature-video" muted playsinline preload="auto">
+      <source src="assets/video/iPhone 17 - frontcamera.mp4" type="video/mp4">
+    </video>
     <div class="feature-text">
       <h2>Front Camera</h2>
       <p>New Centre Stage front camera for smarter group selfies and video.</p>
@@ -55,7 +60,7 @@
   </div>
 
   <div class="feature-item">
-    <img src="assets/images/iPhone17_dualcamera.png" alt="Cameras">
+    <img src="assets/images/iPhone17 - camera.png" alt="Cameras">
     <div class="feature-text">
       <h2>Cameras</h2>
       <p>48MP Dual Fusion rear cameras, Ultra Wide, more resolution & detail.</p>
@@ -63,7 +68,9 @@
   </div>
 
   <div class="feature-item">
-    <img src="assets/images/iPhone17_dualcamera.png" alt="Cameras">
+    <video class="feature-video" muted playsinline preload="auto">
+      <source src="assets/video/iPhone 17 - screen durability.mp4" type="video/mp4">
+    </video>
     <div class="feature-text">
       <h2>Durability</h2>
       <p>Ceramic Shield 2 front with 3× better scratch resistance.</p>
@@ -71,7 +78,7 @@
   </div>
 
   <div class="feature-item">
-    <img src="assets/images/iPhone17_dualcamera.png" alt="Cameras">
+    <img src="assets/images/iPhone17 - chip.png" alt="Cameras">
     <div class="feature-text">
       <h2>Chip & Battery</h2>
       <p>A19 chip delivers all-day battery life.</p>
@@ -79,7 +86,7 @@
   </div>
 
   <div class="feature-item">
-    <img src="assets/images/iPhone17_dualcamera.png" alt="Cameras">
+    <img src="assets/images/iPhone17 - ios26.png" alt="Cameras">
     <div class="feature-text">
       <h2>iOS</h2>
       <p>New iOS 26 with intelligent features built in.</p>
@@ -96,6 +103,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
@@ -105,5 +113,6 @@
       <p><a href="Group001_12345_iPhone ester egg.html">Privacy Policy</a> │ <a href="Group001_12345_iPhone ester egg.html">Terms of Use</a> │ <a href="Group001_12345_iPhone ester egg.html">Sales and Refunds</a> │ <a href="Group001_12345_iPhone ester egg.html">Legal</a> │ <a href="Group001_12345_iPhone ester egg.html">Site Map</a></p>
     </div>
   </footer>
+  <script src="assets/js/features.js"></script>
 </body>
 </html>
