--- a/Group001_12345_iPhone Buy.html
+++ b/Group001_12345_iPhone Buy.html
@@ -10,7 +10,10 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#">Apple</a>
+      <a href="#" class="logo">
+      <img src="assets/images/Apple-Logo.png" alt="apple">
+      <h2>Apple (Tsun Jin)</h2>
+    </a>
     </div>
     <nav class="main-nav">
       <ul>
@@ -18,6 +21,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
@@ -32,27 +36,27 @@
 
     <section class="models">
       <div class="model-card">
-        <img src="assets/images/iphone17.png" alt="iPhone 17">
+        <img src="assets/images/image002.png" alt="iPhone 17">
         <h2>iPhone 17</h2>
-        <p>From RM3,899</p>
+        <p>From RM3,999</p>
         <a href="#" class="btn">Buy</a>
       </div>
       <div class="model-card">
-        <img src="assets/images/iphone17plus.png" alt="iPhone 17 Plus">
-        <h2>iPhone 17 Plus</h2>
-        <p>From RM4,399</p>
+        <img src="assets/images/image003.png" alt="iPhone Air">
+        <h2>iPhone Air</h2>
+        <p>From RM4,999</p>
         <a href="#" class="btn">Buy</a>
       </div>
       <div class="model-card">
-        <img src="assets/images/iphone17pro.png" alt="iPhone 17 Pro">
+        <img src="assets/images/image004.png" alt="iPhone 17 Pro">
         <h2>iPhone 17 Pro</h2>
-        <p>From RM5,099</p>
+        <p>From RM5,499</p>
         <a href="#" class="btn">Buy</a>
       </div>
       <div class="model-card">
-        <img src="assets/images/iphone17promax.png" alt="iPhone 17 Pro Max">
+        <img src="assets/images/image005.png" alt="iPhone 17 Pro Max">
         <h2>iPhone 17 Pro Max</h2>
-        <p>From RM5,899</p>
+        <p>From RM5,999</p>
         <a href="#" class="btn">Buy</a>
       </div>
     </section>
@@ -68,6 +72,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
