--- a/Group001_12345_index.html
+++ b/Group001_12345_index.html
@@ -9,7 +9,10 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#"><img src="assets/images/Apple-Logo.png" alt="apple">
+      <a href="#" class="logo">
+      <img src="assets/images/Apple-Logo.png" alt="apple">
+      <h2>Apple (Tsun Jin)</h2>
+    </a>
       </a>
     </div>
     <nav class="main-nav">
@@ -18,6 +21,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
@@ -31,21 +35,21 @@
         <p>All out Pro.</p>
         <img src="assets/images/image004.png" alt="iPhone 17 Pro">
         <p class="availability">Available starting 19 September</p>
-        <p><a class="btn" href="Group001_12345_iPhone 17 Pro.html">Learn more</a> <a class="btn-outline" href="#">Buy now</a></p>
+        <p><a class="btn" href="Group001_12345_iPhone 17 Pro.html">Learn more</a> <a class="btn-outline" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>
       <div class="promo-item">
         <h2>iPhone Air</h2>
         <p>The thinnest iPhone ever. With the power of pro inside.</p>
         <img src="assets/images/image003.png" alt="iPhone Air">
         <p class="availability">Available starting 19 September</p>
-        <p><a class="btn" href="Group001_12345_iPhone Air.html">Learn more</a> <a class="btn-outline" href="#">Buy now</a></p>
+        <p><a class="btn" href="Group001_12345_iPhone Air.html">Learn more</a> <a class="btn-outline" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>
       <div class="promo-item">
         <h2>iPhone 17</h2>
         <p>Magichromatic.</p>
         <img src="assets/images/image002.png" alt="iPhone 17">
         <p class="availability">Available starting 19 September</p>
-        <p><a class="btn" href="1Group001_12345_iPhone 17.html">Learn more</a> <a class="btn-outline" href="#">Buy now</a></p>
+        <p><a class="btn" href="Group001_12345_iPhone 17.html">Learn more</a> <a class="btn-outline" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>
     </section>
 
@@ -56,6 +60,7 @@
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
         <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
         <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
       </ul>
