fixed iphone air

--- a/Group001_12345_iPhone 17 Pro.html
+++ b/Group001_12345_iPhone 17 Pro.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="Group001_12345_index.html">Home</a></li>
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
-        <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
+        <li><a href="Group001_12345_iPhone Air.html">iPhone Air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
         <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
@@ -116,7 +116,7 @@
       <ul>
         <li><a href="Group001_12345_index.html">Home</a></li>
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
-        <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
+        <li><a href="Group001_12345_iPhone Air.html">iPhone Air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
         <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
