--- a/Group001_12345_iPhone Air.html
+++ b/Group001_12345_iPhone Air.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="Group001_12345_index.html">Home</a></li>
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
-        <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
+        <li><a href="Group001_12345_iPhone Air.html">iPhone Air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
         <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
@@ -31,7 +31,7 @@
   <main>
     <section class="hero">
       <div class="hero-content">
-        <h1>iPhone 17 Air</h1>
+        <h1>iPhone Air</h1>
         <p>Light as air. Powerful as ever.</p>
         <p class="cta"><a class="btn" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>
