--- a/Group001_12345_comparison.html
+++ b/Group001_12345_comparison.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="Group001_12345_index.html">Home</a></li>
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
-        <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
+        <li><a href="Group001_12345_iPhone Air.html">iPhone Air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
         <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
@@ -92,7 +92,7 @@
       <ul>
         <li><a href="Group001_12345_index.html">Home</a></li>
         <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
-        <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
+        <li><a href="Group001_12345_iPhone Air.html">iPhone Air</a></li>
         <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
         <li><a href="Group001_12345_comparison.html">Comparison</a></li>
         <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
