fixed some grammer bug

--- a/Group001_12345_comparison.html
+++ b/Group001_12345_comparison.html
@@ -28,7 +28,7 @@
   </header>
 
   <main>
-    <h1>Compare iPhone 17 Models</h1>
+    <h1>Comparison of the new models</h1>
 
     <div class="card-container">
 
