--- a/Group001_12345_iPhone 17 Pro.html
+++ b/Group001_12345_iPhone 17 Pro.html
@@ -56,7 +56,7 @@
         </video>
         <div class="feature-text">
           <h2>A19 Pro Chip</h2>
-          <p>vapour cooled for lightning‑fast performance. Breakthrough battery life.</p>
+          <p>Vapour cooled for lightning‑fast performance. Breakthrough battery life.</p>
         </div>
       </div>
 
@@ -101,7 +101,7 @@
           <source src="assets/video/iPhone 17 Pro and Max_front camera.mp4" type="video/mp4">
         </video>
         <div class="feature-text">
-          <h2>Front camera</h2>
+          <h2>Front Camera</h2>
           <p>New Center Stage front camera. Flexible ways to frame your shot. Smarter group selfies. And so much more.</p>
         </div>
       </div>
