--- a/Group001_12345_iPhone 17.html
+++ b/Group001_12345_iPhone 17.html
@@ -31,7 +31,7 @@
     <section class="hero">
       <div class="hero-content">
         <h1>iPhone 17</h1>
-        <p>Even more delightful. Even more durable.</p>
+        <p>More delightful. More durable.</p>
         <p class="cta"><a class="btn" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>  
     <video class="hero-video" autoplay loop muted>
@@ -62,7 +62,7 @@
   <div class="feature-item">
     <img src="assets/images/iPhone17 - camera.png" alt="Cameras">
     <div class="feature-text">
-      <h2>Cameras</h2>
+      <h2>Camera</h2>
       <p>48MP Dual Fusion rear cameras, Ultra Wide, more resolution & detail.</p>
     </div>
   </div>
