--- a/Group001_12345_index.html
+++ b/Group001_12345_index.html
@@ -33,13 +33,13 @@
       <div class="promo-item">
         <h2>iPhone 17 Pro</h2>
         <p>All out Pro.</p>
-        <img src="assets/images/image004.png" alt="iPhone 17 Pro">
+        <img src="assets/images/image005.png" alt="iPhone 17 Pro">
         <p class="availability">Available starting 19 September</p>
         <p><a class="btn" href="Group001_12345_iPhone 17 Pro.html">Learn more</a> <a class="btn-outline" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
       </div>
       <div class="promo-item">
         <h2>iPhone Air</h2>
-        <p>The thinnest iPhone ever. With the power of pro inside.</p>
+        <p>The thinnest iPhone ever.</p>
         <img src="assets/images/image003.png" alt="iPhone Air">
         <p class="availability">Available starting 19 September</p>
         <p><a class="btn" href="Group001_12345_iPhone Air.html">Learn more</a> <a class="btn-outline" href="Group001_12345_iPhone Buy.html">Buy now</a></p>
