--- a/Group001_22107_iPhone About Us.html
+++ b/Group001_22107_iPhone About Us.html
@@ -4,26 +4,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Apple (Malaysia)</title>
-  <link rel="stylesheet" href="assets/css/1Group001_12345_iPhone About Us.css">
+  <link rel="stylesheet" href="assets/css/Group001_22107_iPhone About Us.css">
   
 </head>
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#" class="logo">
+      <a href="Group001_22100_index.html" class="logo">
       <img src="assets/images/Apple-Logo.png" alt="apple">
       <h2>Apple (Tsun Jin)</h2>
     </a>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="Group001_12345_index.html">Home</a></li>
-        <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
-        <li><a href="Group001_12345_iPhone Air.html">iPhone Air</a></li>
-        <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
-        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
-        <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
-        <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
+        <li><a href="Group001_22100_index.html">Home</a></li>
+        <li><a href="Group001_21135_iPhone 17.html">iPhone 17</a></li>
+        <li><a href="Group001_22155_iPhone Air.html">iPhone Air</a></li>
+        <li><a href="Group001_22097_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_22101_comparison.html">Comparison</a></li>
+        <li><a href="Group001_22100_iPhone Buy.html">Buy</a></li>
+        <li><a href="Group001_22107_iPhone About Us.html">About Us</a></li>
       </ul>
     </nav>
   </header>
@@ -52,18 +52,18 @@
   <footer class="site-footer">
     <div class="footer-links">
       <ul>
-        <li><a href="Group001_12345_index.html">Home</a></li>
-        <li><a href="Group001_12345_iPhone 17.html">iPhone 17</a></li>
-        <li><a href="Group001_12345_iPhone Air.html">iPhone air</a></li>
-        <li><a href="Group001_12345_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
-        <li><a href="Group001_12345_comparison.html">Comparison</a></li>
-        <li><a href="Group001_12345_iPhone Buy.html">Buy</a></li>
-        <li><a href="Group001_12345_iPhone About Us.html">About Us</a></li>
+        <li><a href="Group001_22100_index.html">Home</a></li>
+        <li><a href="Group001_21135_iPhone 17.html">iPhone 17</a></li>
+        <li><a href="Group001_22155_iPhone Air.html">iPhone Air</a></li>
+        <li><a href="Group001_22097_iPhone 17 Pro.html">iPhone 17 Pro</a></li>
+        <li><a href="Group001_22101_comparison.html">Comparison</a></li>
+        <li><a href="Group001_22100_iPhone Buy.html">Buy</a></li>
+        <li><a href="Group001_22107_iPhone About Us.html">About Us</a></li>
       </ul>
     </div>
     <div class="legal">
       <p>Copyright © 2025 S1S1 Group 001 All rights reserved.</p>
-      <p><a href="Group001_12345_iPhone ester egg.html">Privacy Policy</a> │ <a href="Group001_12345_iPhone ester egg.html">Terms of Use</a> │ <a href="Group001_12345_iPhone ester egg.html">Sales and Refunds</a> │ <a href="Group001_12345_iPhone ester egg.html">Legal</a> │ <a href="Group001_12345_iPhone ester egg.html">Site Map</a></p>
+      <p><a href="Group001_22107_iPhone ester egg.html">Privacy Policy</a> │ <a href="Group001_22107_iPhone ester egg.html">Terms of Use</a> │ <a href="Group001_22107_iPhone ester egg.html">Sales and Refunds</a> │ <a href="Group001_22107_iPhone ester egg.html">Legal</a> │ <a href="Group001_22107_iPhone ester egg.html">Site Map</a></p>
     </div>
   </footer>
   <script src="assets/js/features.js"></script>
