--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <div class="logo">
-      <a href="#" class="logo">
+      <a href="Group001_12345_index.html" class="logo">
       <img src="assets/images/Apple-Logo.png" alt="apple">
       <h2>Apple (Tsun Jin)</h2>
     </a>
